initial user payment history grid functionality Files modified - [PaymentHistory,cx2]

--- a/src/main/webapp/pages/PaymentHistory/PaymentHistory.html
+++ b/src/main/webapp/pages/PaymentHistory/PaymentHistory.html
@@ -10,7 +10,7 @@
                         <wm-breadcrumb dataset="bind:Variables.Breadcrumb.dataSet" name="breadcrumb1"></wm-breadcrumb>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow3">
+                <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn5"></wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
@@ -29,8 +29,75 @@
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow3">
+                    <wm-gridcolumn columnwidth="12" id="gridcolumn7" name="gridcolumn6_1">
+                        <wm-grid title="" dataset="bind:Variables.svGetTransactionsByMunicipality.dataSet" navigation="Classic" name="gridTransactions" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
+                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
+                            <wm-grid-column binding="transactionId" caption="Transaction ID" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="transactionDate" caption="Transaction Date" type="string" edit-widget-type="text" show="true" filterwidget="date" readonly="false">{{row.getProperty('transactionDate') | toLocalDateString}}</wm-grid-column>
+                            <wm-grid-column binding="feeAmount" caption="Transaction Total" type="string" formatpattern="toCurrency" currencypattern="USD" fractionsize="2" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="userName" caption="Paid By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="paymentMethod" caption="Payment Method" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="paymentNumber" caption="Payment Number" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-format-list-bulleted" title="Transaction Details" action="Widgets.dialogFeeDetails.open()" disabled="false"></wm-grid-row-action>
+                        </wm-grid>
+                    </wm-gridcolumn>
+                </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
+    <wm-view class="dialog-view" name="viewFeeDetails">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Transaction Details" iconclass="wi wi-attach-money" name="dialogFeeDetails" width="60%">
+            <wm-layoutgrid name="layoutgrid2">
+                <wm-gridrow name="gridrow9">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn15">
+                        <wm-label padding="unset 0.5em unset 1em" name="label7_1" caption="bind:'<h4>Transaction ID</h4><p>' + Widgets.gridTransactions.selecteditem.transactionId + '</p>'"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="8" name="gridcolumn16_2">
+                        <wm-label padding="unset 0.5em" name="label6_1" caption="bind:'<h4>Transaction Date</h4><p>' + (Widgets.gridTransactions.selecteditem.transactionDate | toLocalDateString) + '</p>'"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow9_1">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn15_1">
+                        <wm-label padding="unset 0.5em unset 1em" name="label7_2" caption="bind:'<h4>Paid By</h4><p>' + Widgets.gridTransactions.selecteditem.userName + '</p>'"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="8" name="gridcolumn16_3">
+                        <wm-label padding="unset 0.5em" name="label6_2" caption="bind:'<h4>Payment Type</h4><p>' + Widgets.gridTransactions.selecteditem.paymentMethod + '</p>'"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow9_2" ng-show="!!Widgets.gridTransactions.selecteditem.paymentNumber">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn15_2">
+                        <wm-label padding="unset 0.5em unset 1em" name="label7_3" caption="bind:'<h4>Payment Number</h4><p>' + Widgets.gridTransactions.selecteditem.paymentNumber + '</p>'"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="8" name="gridcolumn16_5"></wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow5">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn11" padding="1em unset">
+                        <wm-grid title="Fees Paid" dataset="bind:Variables.svFeesForTransaction.dataSet" navigation="Classic" name="gridFeeDetails" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
+                            <wm-grid-column binding="amount" caption="Amount" type="string" formatpattern="toCurrency" currencypattern="USD" fractionsize="2" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="feeType" caption="Fee Type" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="accountingCode" caption="Accounting Code" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="formTitle" caption="Form Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="formDesign" caption="Form" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="municipalityName" caption="Municipality" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="fullAddress" caption="Address" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="comments" caption="Fee Comments" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                        </wm-grid>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow9_3">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn16_5">
+                        <wm-label padding="unset 0.5em unset 1em" name="label6_4" caption="bind:'<h4>Transaction Total</h4><p>' + (Widgets.gridTransactions.selecteditem.feeAmount | toCurrency:'$':2) + '</p>'"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="8" name="gridcolumn16_4">
+                        <wm-label padding="unset 0.5em" name="label6_3" caption="bind:'<h4>Transaction Comments</h4><p>' + Widgets.gridTransactions.selecteditem.transactionComments + '</p>'"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions1">
+                <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button1" iconclass="wi wi-cancel"></wm-button>
+            </wm-dialogactions>
+        </wm-dialog>
+    </wm-view>
 </wm-page>
