--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -78,7 +78,7 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn13" padding="2em unset" horizontalalign="center">
-                        <wm-tile width="240px" height="160px" class="bg-primary" name="tilePayHist" on-click="Variables.goToPage_PaymentHistory.invoke()">
+                        <wm-tile width="240px" height="160px" class="bg-primary" name="tilePayHist" on-click="Variables.goToPage_PaymentHistory.invoke()" show="true">
                             <wm-layoutgrid height="100%" name="layoutgrid8">
                                 <wm-gridrow height="100%" name="gridrow11">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn24" class="col-xs-3">
@@ -109,7 +109,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow10">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn22" padding="1em unset" horizontalalign="center">
-                        <wm-tile width="240px" height="160px" class="bg-primary" name="tile9" on-click="Variables.goToPage_VendorApplication.invoke()" show="true" accessroles="User,CXAdmin">
+                        <wm-tile width="240px" height="160px" class="bg-primary" name="tile9" on-click="Variables.goToPage_VendorApplication.invoke()" show="bind:Variables.AdminVendorsList.dataSet.content.length === 0" accessroles="Everyone">
                             <wm-layoutgrid height="100%" name="layoutgrid10">
                                 <wm-gridrow height="100%" name="gridrow13">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" class="col-xs-3" name="gridcolumn28">
