improvements to additional documents grid Files modified - [MunicipalitySettings]

--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
@@ -226,6 +226,7 @@
                                         <wm-grid name="gridAdditionalImages" dataset="bind:Variables.lvAdditionalDocuments.dataSet" title="" navigation="Classic" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
                                             <wm-grid-column binding="id" caption="ID"></wm-grid-column>
                                             <wm-grid-column binding="filename" caption="Filename"></wm-grid-column>
+                                            <wm-grid-column binding="itemGuid" caption="Item GUID (test)"></wm-grid-column>
                                             <wm-grid-column binding="mimetype" caption="Media Type"></wm-grid-column>
                                         </wm-grid>
                                     </wm-gridcolumn>
